Analizador completo/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARRAY
    ARROW
    BREAK
    CALLMETHOD
    CASE
    CHARACTER
    CLASS
    COLLECTIONTYPE
    COMMENT
    CONTINUE
    DEFAULT
    DICTIONARYTYPE
    DOUBLE
    ENUM
    FOR
    FUNC
    GUARD
    IMPORT
    IN
    INIT
    MINUSONE
    OPTIONALVARIABLE
    PLUSONE
    PRIVATE
    PUBLIC
    RANGE
    REPEAT
    RETURN
    SETVARIABLE
    STATIC
    STRUCT
    SWITCH
    TYPEALIAS
    VALUESTYPE
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment_to_type
Rule 5     statement -> assignment_to_type_collection
Rule 6     statement -> assignment_to_type_collection_set
Rule 7     statement -> variable_declarator VARIABLE ASSIGN expression
Rule 8     statement -> ifComp
Rule 9     statement -> print_statement
Rule 10    variable_declarator -> LET
Rule 11    variable_declarator -> VAR
Rule 12    print_statement -> PRINT LPAREN expression RPAREN
Rule 13    expression -> expression PLUS expression
Rule 14    expression -> expression MINUS expression
Rule 15    expression -> expression MULTIPLY expression
Rule 16    expression -> expression DIVIDE expression
Rule 17    expression -> expression GREATERTHAN expression
Rule 18    expression -> expression LESSTHAN expression
Rule 19    expression -> expression EQUALS expression
Rule 20    expression -> expression NOTEQUALS expression
Rule 21    expression -> expression AND expression
Rule 22    expression -> expression OR expression
Rule 23    expression -> expression COMMA expression
Rule 24    expression -> expression COLON expression
Rule 25    expression -> LPAREN expression RPAREN
Rule 26    expression -> NOT expression
Rule 27    expression -> VARIABLE
Rule 28    expression -> type
Rule 29    expression -> comparacion
Rule 30    expression -> boolean_expresion
Rule 31    assignment_to_type -> variable_declarator VARIABLE COLON STRING ASSIGN WSTRING
Rule 32    assignment_to_type -> variable_declarator VARIABLE COLON INTEGER ASSIGN NUMBER
Rule 33    assignment_to_type -> variable_declarator VARIABLE COLON BOOLEAN ASSIGN TRUE
Rule 34    assignment_to_type -> variable_declarator VARIABLE COLON BOOLEAN ASSIGN FALSE
Rule 35    assignment_to_type -> variable_declarator VARIABLE COLON FLOAT ASSIGN DECIMAL
Rule 36    assignment_to_type_collection -> variable_declarator VARIABLE COLON LSQUAREBRACKET integer_options RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_integuer RSQUAREBRACKET
Rule 37    assignment_to_type_collection -> variable_declarator VARIABLE COLON LSQUAREBRACKET STRING RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_string RSQUAREBRACKET
Rule 38    assignment_to_type_collection -> variable_declarator VARIABLE COLON LSQUAREBRACKET BOOLEAN RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_booleano RSQUAREBRACKET
Rule 39    assignment_to_type_collection -> variable_declarator VARIABLE COLON LSQUAREBRACKET FLOAT RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_float RSQUAREBRACKET
Rule 40    integer_options -> INTEGER
Rule 41    integer_options -> INT
Rule 42    mul_integuer -> mul_integuer COMMA NUMBER
Rule 43    mul_integuer -> NUMBER
Rule 44    mul_string -> mul_string COMMA WSTRING
Rule 45    mul_string -> WSTRING
Rule 46    mul_booleano -> mul_booleano COMMA boolean_option
Rule 47    mul_booleano -> boolean_option
Rule 48    boolean_option -> TRUE
Rule 49    boolean_option -> FALSE
Rule 50    mul_float -> mul_float COMMA DECIMAL
Rule 51    mul_float -> DECIMAL
Rule 52    comparacion -> VARIABLE operadorComp VARIABLE
Rule 53    comparacion -> DECIMAL operadorComp DECIMAL
Rule 54    comparacion -> WSTRING operadorComp WSTRING
Rule 55    comparacion -> NUMBER operadorComp NUMBER
Rule 56    comparacion -> VARIABLE operadorComp DECIMAL
Rule 57    comparacion -> DECIMAL operadorComp VARIABLE
Rule 58    comparacion -> WSTRING operadorComp VARIABLE
Rule 59    comparacion -> VARIABLE operadorComp WSTRING
Rule 60    comparacion -> NUMBER operadorComp VARIABLE
Rule 61    comparacion -> VARIABLE operadorComp NUMBER
Rule 62    operadorComp -> GREATERTHAN
Rule 63    operadorComp -> LESSTHAN
Rule 64    operadorComp -> EQUALS
Rule 65    operadorComp -> NOTEQUALS
Rule 66    ifComp -> IF LPAREN comparacion RPAREN LBRACES statements RBRACES
Rule 67    ifComp -> IF LPAREN comparacion RPAREN LBRACES statements RBRACES ELSE LBRACES statements RBRACES
Rule 68    type -> BOOL
Rule 69    type -> DECIMAL
Rule 70    type -> WSTRING
Rule 71    type -> NUMBER
Rule 72    assignment_to_type_collection_set -> variable_declarator VARIABLE COLON SET LESSTHAN integer_options GREATERTHAN ASSIGN LSQUAREBRACKET mul_integuer RSQUAREBRACKET
Rule 73    assignment_to_type_collection_set -> variable_declarator VARIABLE COLON SET LESSTHAN STRING GREATERTHAN ASSIGN LSQUAREBRACKET mul_string RSQUAREBRACKET
Rule 74    assignment_to_type_collection_set -> variable_declarator VARIABLE COLON SET LESSTHAN BOOLEAN GREATERTHAN ASSIGN LSQUAREBRACKET mul_booleano RSQUAREBRACKET
Rule 75    assignment_to_type_collection_set -> variable_declarator VARIABLE COLON SET LESSTHAN FLOAT GREATERTHAN ASSIGN LSQUAREBRACKET mul_float RSQUAREBRACKET
Rule 76    boolean_expresion -> LPAREN boolean_option logical_operator boolean_option RPAREN boolean_expresion
Rule 77    boolean_expresion -> boolean_expresion LPAREN boolean_option logical_operator boolean_option RPAREN
Rule 78    boolean_expresion -> boolean_option logical_operator boolean_option
Rule 79    boolean_expresion -> logical_operator boolean_option
Rule 80    boolean_expresion -> boolean_option logical_operator
Rule 81    logical_operator -> AND
Rule 82    logical_operator -> OR

Terminals, with rules where they appear

AND                  : 21 81
ARRAY                : 
ARROW                : 
ASSIGN               : 7 31 32 33 34 35 36 37 38 39 72 73 74 75
BOOL                 : 68
BOOLEAN              : 33 34 38 74
BREAK                : 
CALLMETHOD           : 
CASE                 : 
CHARACTER            : 
CLASS                : 
COLLECTIONTYPE       : 
COLON                : 24 31 32 33 34 35 36 37 38 39 72 73 74 75
COMMA                : 23 42 44 46 50
COMMENT              : 
CONTINUE             : 
DECIMAL              : 35 50 51 53 53 56 57 69
DEFAULT              : 
DICTIONARYTYPE       : 
DIVIDE               : 16
DOUBLE               : 
ELSE                 : 67
ENUM                 : 
EQUALS               : 19 64
FALSE                : 34 49
FLOAT                : 35 39 75
FOR                  : 
FUNC                 : 
GREATERTHAN          : 17 62 72 73 74 75
GUARD                : 
IF                   : 66 67
IMPORT               : 
IN                   : 
INIT                 : 
INT                  : 41
INTEGER              : 32 40
LBRACES              : 66 67 67
LESSTHAN             : 18 63 72 73 74 75
LET                  : 10
LPAREN               : 12 25 66 67 76 77
LSQUAREBRACKET       : 36 36 37 37 38 38 39 39 72 73 74 75
MINUS                : 14
MINUSONE             : 
MULTIPLY             : 15
NOT                  : 26
NOTEQUALS            : 20 65
NUMBER               : 32 42 43 55 55 60 61 71
OPTIONALVARIABLE     : 
OR                   : 22 82
PLUS                 : 13
PLUSONE              : 
PRINT                : 12
PRIVATE              : 
PUBLIC               : 
RANGE                : 
RBRACES              : 66 67 67
REPEAT               : 
RETURN               : 
RPAREN               : 12 25 66 67 76 77
RSQUAREBRACKET       : 36 36 37 37 38 38 39 39 72 73 74 75
SET                  : 72 73 74 75
SETVARIABLE          : 
STATIC               : 
STRING               : 31 37 73
STRUCT               : 
SWITCH               : 
TRUE                 : 33 48
TYPEALIAS            : 
VALUESTYPE           : 
VAR                  : 11
VARIABLE             : 7 27 31 32 33 34 35 36 37 38 39 52 52 56 57 58 59 60 61 72 73 74 75
WHILE                : 
WSTRING              : 31 44 45 54 54 58 59 70
error                : 

Nonterminals, with rules where they appear

assignment_to_type   : 4
assignment_to_type_collection : 5
assignment_to_type_collection_set : 6
boolean_expresion    : 30 76 77
boolean_option       : 46 47 76 76 77 77 78 78 79 80
comparacion          : 29 66 67
expression           : 7 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 26
ifComp               : 8
integer_options      : 36 72
logical_operator     : 76 77 78 79 80
mul_booleano         : 38 46 74
mul_float            : 39 50 75
mul_integuer         : 36 42 72
mul_string           : 37 44 73
operadorComp         : 52 53 54 55 56 57 58 59 60 61
print_statement      : 9
program              : 0
statement            : 2 3
statements           : 1 2 66 67 67
type                 : 28
variable_declarator  : 7 31 32 33 34 35 36 37 38 39 72 73 74 75

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment_to_type
    (5) statement -> . assignment_to_type_collection
    (6) statement -> . assignment_to_type_collection_set
    (7) statement -> . variable_declarator VARIABLE ASSIGN expression
    (8) statement -> . ifComp
    (9) statement -> . print_statement
    (31) assignment_to_type -> . variable_declarator VARIABLE COLON STRING ASSIGN WSTRING
    (32) assignment_to_type -> . variable_declarator VARIABLE COLON INTEGER ASSIGN NUMBER
    (33) assignment_to_type -> . variable_declarator VARIABLE COLON BOOLEAN ASSIGN TRUE
    (34) assignment_to_type -> . variable_declarator VARIABLE COLON BOOLEAN ASSIGN FALSE
    (35) assignment_to_type -> . variable_declarator VARIABLE COLON FLOAT ASSIGN DECIMAL
    (36) assignment_to_type_collection -> . variable_declarator VARIABLE COLON LSQUAREBRACKET integer_options RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_integuer RSQUAREBRACKET
    (37) assignment_to_type_collection -> . variable_declarator VARIABLE COLON LSQUAREBRACKET STRING RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_string RSQUAREBRACKET
    (38) assignment_to_type_collection -> . variable_declarator VARIABLE COLON LSQUAREBRACKET BOOLEAN RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_booleano RSQUAREBRACKET
    (39) assignment_to_type_collection -> . variable_declarator VARIABLE COLON LSQUAREBRACKET FLOAT RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_float RSQUAREBRACKET
    (72) assignment_to_type_collection_set -> . variable_declarator VARIABLE COLON SET LESSTHAN integer_options GREATERTHAN ASSIGN LSQUAREBRACKET mul_integuer RSQUAREBRACKET
    (73) assignment_to_type_collection_set -> . variable_declarator VARIABLE COLON SET LESSTHAN STRING GREATERTHAN ASSIGN LSQUAREBRACKET mul_string RSQUAREBRACKET
    (74) assignment_to_type_collection_set -> . variable_declarator VARIABLE COLON SET LESSTHAN BOOLEAN GREATERTHAN ASSIGN LSQUAREBRACKET mul_booleano RSQUAREBRACKET
    (75) assignment_to_type_collection_set -> . variable_declarator VARIABLE COLON SET LESSTHAN FLOAT GREATERTHAN ASSIGN LSQUAREBRACKET mul_float RSQUAREBRACKET
    (10) variable_declarator -> . LET
    (11) variable_declarator -> . VAR
    (66) ifComp -> . IF LPAREN comparacion RPAREN LBRACES statements RBRACES
    (67) ifComp -> . IF LPAREN comparacion RPAREN LBRACES statements RBRACES ELSE LBRACES statements RBRACES
    (12) print_statement -> . PRINT LPAREN expression RPAREN

    LET             shift and go to state 10
    VAR             shift and go to state 11
    IF              shift and go to state 12
    PRINT           shift and go to state 13

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment_to_type             shift and go to state 4
    assignment_to_type_collection  shift and go to state 5
    assignment_to_type_collection_set shift and go to state 6
    variable_declarator            shift and go to state 7
    ifComp                         shift and go to state 8
    print_statement                shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment_to_type
    (5) statement -> . assignment_to_type_collection
    (6) statement -> . assignment_to_type_collection_set
    (7) statement -> . variable_declarator VARIABLE ASSIGN expression
    (8) statement -> . ifComp
    (9) statement -> . print_statement
    (31) assignment_to_type -> . variable_declarator VARIABLE COLON STRING ASSIGN WSTRING
    (32) assignment_to_type -> . variable_declarator VARIABLE COLON INTEGER ASSIGN NUMBER
    (33) assignment_to_type -> . variable_declarator VARIABLE COLON BOOLEAN ASSIGN TRUE
    (34) assignment_to_type -> . variable_declarator VARIABLE COLON BOOLEAN ASSIGN FALSE
    (35) assignment_to_type -> . variable_declarator VARIABLE COLON FLOAT ASSIGN DECIMAL
    (36) assignment_to_type_collection -> . variable_declarator VARIABLE COLON LSQUAREBRACKET integer_options RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_integuer RSQUAREBRACKET
    (37) assignment_to_type_collection -> . variable_declarator VARIABLE COLON LSQUAREBRACKET STRING RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_string RSQUAREBRACKET
    (38) assignment_to_type_collection -> . variable_declarator VARIABLE COLON LSQUAREBRACKET BOOLEAN RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_booleano RSQUAREBRACKET
    (39) assignment_to_type_collection -> . variable_declarator VARIABLE COLON LSQUAREBRACKET FLOAT RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_float RSQUAREBRACKET
    (72) assignment_to_type_collection_set -> . variable_declarator VARIABLE COLON SET LESSTHAN integer_options GREATERTHAN ASSIGN LSQUAREBRACKET mul_integuer RSQUAREBRACKET
    (73) assignment_to_type_collection_set -> . variable_declarator VARIABLE COLON SET LESSTHAN STRING GREATERTHAN ASSIGN LSQUAREBRACKET mul_string RSQUAREBRACKET
    (74) assignment_to_type_collection_set -> . variable_declarator VARIABLE COLON SET LESSTHAN BOOLEAN GREATERTHAN ASSIGN LSQUAREBRACKET mul_booleano RSQUAREBRACKET
    (75) assignment_to_type_collection_set -> . variable_declarator VARIABLE COLON SET LESSTHAN FLOAT GREATERTHAN ASSIGN LSQUAREBRACKET mul_float RSQUAREBRACKET
    (10) variable_declarator -> . LET
    (11) variable_declarator -> . VAR
    (66) ifComp -> . IF LPAREN comparacion RPAREN LBRACES statements RBRACES
    (67) ifComp -> . IF LPAREN comparacion RPAREN LBRACES statements RBRACES ELSE LBRACES statements RBRACES
    (12) print_statement -> . PRINT LPAREN expression RPAREN

    $end            reduce using rule 1 (program -> statements .)
    LET             shift and go to state 10
    VAR             shift and go to state 11
    IF              shift and go to state 12
    PRINT           shift and go to state 13

    statement                      shift and go to state 14
    assignment_to_type             shift and go to state 4
    assignment_to_type_collection  shift and go to state 5
    assignment_to_type_collection_set shift and go to state 6
    variable_declarator            shift and go to state 7
    ifComp                         shift and go to state 8
    print_statement                shift and go to state 9

state 3

    (3) statements -> statement .

    LET             reduce using rule 3 (statements -> statement .)
    VAR             reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACES         reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> assignment_to_type .

    LET             reduce using rule 4 (statement -> assignment_to_type .)
    VAR             reduce using rule 4 (statement -> assignment_to_type .)
    IF              reduce using rule 4 (statement -> assignment_to_type .)
    PRINT           reduce using rule 4 (statement -> assignment_to_type .)
    $end            reduce using rule 4 (statement -> assignment_to_type .)
    RBRACES         reduce using rule 4 (statement -> assignment_to_type .)


state 5

    (5) statement -> assignment_to_type_collection .

    LET             reduce using rule 5 (statement -> assignment_to_type_collection .)
    VAR             reduce using rule 5 (statement -> assignment_to_type_collection .)
    IF              reduce using rule 5 (statement -> assignment_to_type_collection .)
    PRINT           reduce using rule 5 (statement -> assignment_to_type_collection .)
    $end            reduce using rule 5 (statement -> assignment_to_type_collection .)
    RBRACES         reduce using rule 5 (statement -> assignment_to_type_collection .)


state 6

    (6) statement -> assignment_to_type_collection_set .

    LET             reduce using rule 6 (statement -> assignment_to_type_collection_set .)
    VAR             reduce using rule 6 (statement -> assignment_to_type_collection_set .)
    IF              reduce using rule 6 (statement -> assignment_to_type_collection_set .)
    PRINT           reduce using rule 6 (statement -> assignment_to_type_collection_set .)
    $end            reduce using rule 6 (statement -> assignment_to_type_collection_set .)
    RBRACES         reduce using rule 6 (statement -> assignment_to_type_collection_set .)


state 7

    (7) statement -> variable_declarator . VARIABLE ASSIGN expression
    (31) assignment_to_type -> variable_declarator . VARIABLE COLON STRING ASSIGN WSTRING
    (32) assignment_to_type -> variable_declarator . VARIABLE COLON INTEGER ASSIGN NUMBER
    (33) assignment_to_type -> variable_declarator . VARIABLE COLON BOOLEAN ASSIGN TRUE
    (34) assignment_to_type -> variable_declarator . VARIABLE COLON BOOLEAN ASSIGN FALSE
    (35) assignment_to_type -> variable_declarator . VARIABLE COLON FLOAT ASSIGN DECIMAL
    (36) assignment_to_type_collection -> variable_declarator . VARIABLE COLON LSQUAREBRACKET integer_options RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_integuer RSQUAREBRACKET
    (37) assignment_to_type_collection -> variable_declarator . VARIABLE COLON LSQUAREBRACKET STRING RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_string RSQUAREBRACKET
    (38) assignment_to_type_collection -> variable_declarator . VARIABLE COLON LSQUAREBRACKET BOOLEAN RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_booleano RSQUAREBRACKET
    (39) assignment_to_type_collection -> variable_declarator . VARIABLE COLON LSQUAREBRACKET FLOAT RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_float RSQUAREBRACKET
    (72) assignment_to_type_collection_set -> variable_declarator . VARIABLE COLON SET LESSTHAN integer_options GREATERTHAN ASSIGN LSQUAREBRACKET mul_integuer RSQUAREBRACKET
    (73) assignment_to_type_collection_set -> variable_declarator . VARIABLE COLON SET LESSTHAN STRING GREATERTHAN ASSIGN LSQUAREBRACKET mul_string RSQUAREBRACKET
    (74) assignment_to_type_collection_set -> variable_declarator . VARIABLE COLON SET LESSTHAN BOOLEAN GREATERTHAN ASSIGN LSQUAREBRACKET mul_booleano RSQUAREBRACKET
    (75) assignment_to_type_collection_set -> variable_declarator . VARIABLE COLON SET LESSTHAN FLOAT GREATERTHAN ASSIGN LSQUAREBRACKET mul_float RSQUAREBRACKET

    VARIABLE        shift and go to state 15


state 8

    (8) statement -> ifComp .

    LET             reduce using rule 8 (statement -> ifComp .)
    VAR             reduce using rule 8 (statement -> ifComp .)
    IF              reduce using rule 8 (statement -> ifComp .)
    PRINT           reduce using rule 8 (statement -> ifComp .)
    $end            reduce using rule 8 (statement -> ifComp .)
    RBRACES         reduce using rule 8 (statement -> ifComp .)


state 9

    (9) statement -> print_statement .

    LET             reduce using rule 9 (statement -> print_statement .)
    VAR             reduce using rule 9 (statement -> print_statement .)
    IF              reduce using rule 9 (statement -> print_statement .)
    PRINT           reduce using rule 9 (statement -> print_statement .)
    $end            reduce using rule 9 (statement -> print_statement .)
    RBRACES         reduce using rule 9 (statement -> print_statement .)


state 10

    (10) variable_declarator -> LET .

    VARIABLE        reduce using rule 10 (variable_declarator -> LET .)


state 11

    (11) variable_declarator -> VAR .

    VARIABLE        reduce using rule 11 (variable_declarator -> VAR .)


state 12

    (66) ifComp -> IF . LPAREN comparacion RPAREN LBRACES statements RBRACES
    (67) ifComp -> IF . LPAREN comparacion RPAREN LBRACES statements RBRACES ELSE LBRACES statements RBRACES

    LPAREN          shift and go to state 16


state 13

    (12) print_statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 17


state 14

    (2) statements -> statements statement .

    LET             reduce using rule 2 (statements -> statements statement .)
    VAR             reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    PRINT           reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    RBRACES         reduce using rule 2 (statements -> statements statement .)


state 15

    (7) statement -> variable_declarator VARIABLE . ASSIGN expression
    (31) assignment_to_type -> variable_declarator VARIABLE . COLON STRING ASSIGN WSTRING
    (32) assignment_to_type -> variable_declarator VARIABLE . COLON INTEGER ASSIGN NUMBER
    (33) assignment_to_type -> variable_declarator VARIABLE . COLON BOOLEAN ASSIGN TRUE
    (34) assignment_to_type -> variable_declarator VARIABLE . COLON BOOLEAN ASSIGN FALSE
    (35) assignment_to_type -> variable_declarator VARIABLE . COLON FLOAT ASSIGN DECIMAL
    (36) assignment_to_type_collection -> variable_declarator VARIABLE . COLON LSQUAREBRACKET integer_options RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_integuer RSQUAREBRACKET
    (37) assignment_to_type_collection -> variable_declarator VARIABLE . COLON LSQUAREBRACKET STRING RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_string RSQUAREBRACKET
    (38) assignment_to_type_collection -> variable_declarator VARIABLE . COLON LSQUAREBRACKET BOOLEAN RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_booleano RSQUAREBRACKET
    (39) assignment_to_type_collection -> variable_declarator VARIABLE . COLON LSQUAREBRACKET FLOAT RSQUAREBRACKET ASSIGN LSQUAREBRACKET mul_float RSQUAREBRACKET
    (72) assignment_to_type_collection_set -> variable_declarator VARIABLE . COLON SET LESSTHAN integer_options GREATERTHAN ASSIGN LSQUAREBRACKET mul_integuer RSQUAREBRACKET
    (73) assignment_to_type_collection_set -> variable_declarator VARIABLE . COLON SET LESSTHAN STRING GREATERTHAN ASSIGN LSQUAREBRACKET mul_string RSQUAREBRACKET
    (74) assignment_to_type_collection_set -> variable_declarator VARIABLE . COLON SET LESSTHAN BOOLEAN GREATERTHAN ASSIGN LSQUAREBRACKET mul_booleano RSQUAREBRACKET
    (75) assignment_to_type_collection_set -> variable_declarator VARIABLE . COLON SET LESSTHAN FLOAT GREATERTHAN ASSIGN LSQUAREBRACKET mul_float RSQUAREBRACKET

    ASSIGN          shift and go to state 18
    COLON           shift and go to state 19


state 16

    (66) ifComp -> IF LPAREN . comparacion RPAREN LBRACES statements RBRACES
    (67) ifComp -> IF LPAREN . comparacion RPAREN LBRACES statements RBRACES ELSE LBRACES statements RBRACES
    (52) comparacion -> . VARIABLE operadorComp VARIABLE
    (53) comparacion -> . DECIMAL operadorComp DECIMAL
    (54) comparacion -> . WSTRING operadorComp WSTRING
    (55) comparacion -> . NUMBER operadorComp NUMBER
    (56) comparacion -> . VARIABLE operadorComp DECIMAL
    (57) comparacion -> . DECIMAL operadorComp VARIABLE
    (58) comparacion -> . WSTRING operadorComp VARIABLE
    (59) comparacion -> . VARIABLE operadorComp WSTRING
    (60) comparacion -> . NUMBER operadorComp VARIABLE
    (61) comparacion -> . VARIABLE operadorComp NUMBER

    VARIABLE        shift and go to state 21
    DECIMAL         shift and go to state 22
    WSTRING         shift and go to state 23
    NUMBER          shift and go to state 24

    comparacion                    shift and go to state 20

state 17

    (12) print_statement -> PRINT LPAREN . expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MULTIPLY expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GREATERTHAN expression
    (18) expression -> . expression LESSTHAN expression
    (19) expression -> . expression EQUALS expression
    (20) expression -> . expression NOTEQUALS expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression OR expression
    (23) expression -> . expression COMMA expression
    (24) expression -> . expression COLON expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NOT expression
    (27) expression -> . VARIABLE
    (28) expression -> . type
    (29) expression -> . comparacion
    (30) expression -> . boolean_expresion
    (68) type -> . BOOL
    (69) type -> . DECIMAL
    (70) type -> . WSTRING
    (71) type -> . NUMBER
    (52) comparacion -> . VARIABLE operadorComp VARIABLE
    (53) comparacion -> . DECIMAL operadorComp DECIMAL
    (54) comparacion -> . WSTRING operadorComp WSTRING
    (55) comparacion -> . NUMBER operadorComp NUMBER
    (56) comparacion -> . VARIABLE operadorComp DECIMAL
    (57) comparacion -> . DECIMAL operadorComp VARIABLE
    (58) comparacion -> . WSTRING operadorComp VARIABLE
    (59) comparacion -> . VARIABLE operadorComp WSTRING
    (60) comparacion -> . NUMBER operadorComp VARIABLE
    (61) comparacion -> . VARIABLE operadorComp NUMBER
    (76) boolean_expresion -> . LPAREN boolean_option logical_operator boolean_option RPAREN boolean_expresion
    (77) boolean_expresion -> . boolean_expresion LPAREN boolean_option logical_operator boolean_option RPAREN
    (78) boolean_expresion -> . boolean_option logical_operator boolean_option
    (79) boolean_expresion -> . logical_operator boolean_option
    (80) boolean_expresion -> . boolean_option logical_operator
    (48) boolean_option -> . TRUE
    (49) boolean_option -> . FALSE
    (81) logical_operator -> . AND
    (82) logical_operator -> . OR

    LPAREN          shift and go to state 25
    NOT             shift and go to state 29
    VARIABLE        shift and go to state 30
    BOOL            shift and go to state 34
    DECIMAL         shift and go to state 35
    WSTRING         shift and go to state 36
    NUMBER          shift and go to state 37
    TRUE            shift and go to state 40
    FALSE           shift and go to state 41
    AND             shift and go to state 27
    OR              shift and go to state 28

    expression                     shift and go to state 26
    type                           shift and go to state 31
    comparacion                    shift and go to state 32
    boolean_expresion              shift and go to state 33
    boolean_option                 shift and go to state 38
    logical_operator               shift and go to state 39

state 18

    (7) statement -> variable_declarator VARIABLE ASSIGN . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression MULTIPLY expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GREATERTHAN expression
    (18) expression -> . expression LESSTHAN expression
    (19) expression -> . expression EQUALS expression
    (20) expression -> . expression NOTEQUALS expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression OR expression
    (23) expression -> . expression COMMA expression
    (24) expression -> . expression COLON expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . NOT expression
    (27) expression -> . VARIABLE
    (28) expression -> . type
    (29) expression -> . comparacion
    (30) expression -> . boolean_expresion
    (68) type -> . BOOL
    (69) type -> . DECIMAL
    (70) type -> . WSTRING
    (71) type -> . NUMBER
    (52) comparacion -> . VARIABLE operadorComp VARIABLE
    (53) comparacion -> . DECIMAL operadorComp DECIMAL
    (54) comparacion -> . WSTRING operadorComp WSTRING
    (55) comparacion -> . NUMBER operadorComp NUMBER
    (56) comparacion -> . VARIABLE operadorComp DECIMAL
    (57) comparacion -> . DECIMAL operadorComp VARIABLE
    (58) comparacion -> . WSTRING operadorComp VARIABLE
    (59) comparacion -> . VARIABLE operadorComp WSTRING
    (60) comparacion -> . NUMBER operadorComp VARIABLE
    (61) comparacion -> . VARIABLE operadorComp NUMBER
    (76) boolean_expresion -> . LPAREN boolean_option logical_operator boolean_option RPAREN boolean_expresion
    (77) boolean_expresion -> . boolean_expresion LPAREN boolean_option logical_operator boolean_option RPAREN
    (78) boolean_expresion -> . boolean_option logical_operator boolean_option
    (79) boolean_expresion -> . logical_operator boolean_option
    (80) boolean_expresion -> . boolean_option logical_operator
    (48) boolean_option -> . TRUE
    (49) boolean_option -> . FALSE
    (81) logical_operator -> . AND
    (82) logical_operator -> . OR

    LPAREN          shift and go to state 25
    NOT             shift and go to state 29
    VARIABLE        shift and go to state 30
    BOOL            shift and go to state 34
    DECIMAL         shift and go to state 35
    WSTRING         shift and go to state 36
    NUMBER          shift and go to state 37
    TRUE            shift and go to state 40
    FALSE           shift and go to state 41
    AND             shift and go to state 27
    OR              shift and go to state 28

    expression                     shift and go to state 42
    type                           shift and go to state 31
    comparacion                    shift and go to state 32
    boolean_expresion              shift and go to state 33
    boolean_option                 shift and go to state 38
    logical_operator               shift and go to state 39

state 19
